tests/NormalTests/paczka1/small_fuzzy/11128490.err
Error in line 3: A369 S75 77,4
Error in line 6: yOQV9HcEoz A369 ?6,5
